Fixed Panel(s) broken line-wrapping. Dropped additional deprecated class
Enact-DCO-1.0-Signed-off-by: Blake Stephens <blake.stephens@lge.com>

--- a/Panels/Panel.module.less
+++ b/Panels/Panel.module.less
@@ -13,6 +13,7 @@
 	display: flex;
 	flex-direction: column;
 	vertical-align: top;
+	white-space: initial;  // Restore the viewport-inherited white-space property
 
 	.body {
 		position: relative;
@@ -86,7 +87,7 @@
 		height: calc(100% + var(--sand-panels-header-title-height));
 		transition: @sand-panel-featurecontent-animation-duration transform ease-in-out;
 		will-change: transform;
-	
+
 		&.shouldFeatureContent {
 			transform: translateY(calc(var(--sand-panels-header-title-height) * -1));
 		}
