--- a/Panels/Panels.module.less
+++ b/Panels/Panels.module.less
@@ -27,10 +27,6 @@
 
 	:global(.enact-locale-right-to-left) & {
 		direction: ltr;
-
-		.controls {
-			direction: rtl;
-		}
 	}
 }
 
